# hit-demo

./: .gitignore  .prettierrc  Cargo.toml  README.md  build.js  config.toml.example  hit-demo.service  package-lock.json  package.json
src/: asset_manager.rs  asset_processor.rs  config.rs  main.rs  utils.rs  version_checker.rs
static/: 404.css  404.js  main.css  script.js
templates/: 404.html  index.html
